# Voicer

./: Cargo.toml  README.md
src/: UI.rs  backend.rs  cli.rs  db_config.rs  frontend.rs  main.rs  sign_up.rs
