[package]
name = "speaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "model"
path = "src/model.rs"

[[bin]]
name = "dbConfig"
path = "src/db_config.rs"

[dependencies]
futures-util = "0.3"
regex = "1.6.1"
record-audio = "0.1.1"
mongodb = "2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rodio = "0.17.1"
chrono = { version = "0.4.19", features = ["serde"] }
hound = "3.4.0"