[package]
name = "speaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "dbConfig"
path = "src/db_config.rs"

[[bin]]
name = "login"
path = "src/login.rs"

[dependencies]
eframe = "0.14.0"
egui = "0.13"
egui_glium = "0.13"
glium = "0.28"
futures-util = "0.3"
regex = "1.6.1"
record-audio = "0.1.1"
mongodb = "2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
mini-redis = "0.4"
rodio = "0.17.1"
chrono = { version = "0.4.19", features = ["serde"] }
hound = "3.4.0"
bincode = "1.3.3"
lazy_static = "1.4.0"
once_cell = "1.8.0"
